Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,7 +43,7 @@ build:
 
   artifacts:
     paths:
-      - build/libs/*.jar
+      - /backend/blur/build/libs/*.jar
   tags:
     - blurrr-deploy
   # only:
