Update .gitlab-ci.yml file
Former-commit-id: bcb7f65d3d20179960b1cad1f740d0d6f098b556

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,8 @@ build:
     - cd backend/blur
     - chmod +x ./gradlew
     - ./gradlew clean build -x test
-
+    - ls -R build/libs  # 생성된 JAR 파일 목록 확인
+    
   artifacts:
     paths:
       - /backend/blur/build/libs/*.jar
