--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,11 +4,6 @@ stages:
   - build
   - deploy
 
-variables:
-  DEPLOY_SERVER: "ubuntu@$SSH_HOST"
-  DEPLOY_PATH: "/home/ubuntu/app"
-  SPRING_PROFILE: "dev"
-
 build:
   stage: build
   before_script:
@@ -45,6 +40,11 @@ build:
 
 deploy:
   stage: deploy
+
+  variables:
+    DEPLOY_PATH: "/home/ubuntu/app"
+    SPRING_PROFILE: "dev"
+
   before_script:
     
     - apt-get update
@@ -54,7 +54,7 @@ deploy:
     - mkdir -p ~/.ssh
     - echo "$SSH_KEY_PEM" > ~/.ssh/id_rsa
     - chmod 600 ~/.ssh/id_rsa
-    - ssh-keyscan -H $DEPLOY_SERVER >> ~/.ssh/known_hosts
+    - ssh-keyscan -H ubuntu@$SSH_HOST >> ~/.ssh/known_hosts
 
   # - 'which ssh-agent || ( apt-get install -y openssh-client )'
   # - eval $(ssh-agent -s)
@@ -66,8 +66,8 @@ deploy:
 
   script:
     - echo "Deploying the project"
-    - scp -i ~/.ssh/id_rsa backend/blur/build/libs/*.jar $DEPLOY_SERVER:$DEPLOY_PATH/
-    - ssh -i ~/.ssh/id_rsa $DEPLOY_SERVER "cd $DEPLOY_PATH && ./deploy.sh"
+    - scp -i ~/.ssh/id_rsa backend/blur/build/libs/*.jar ubuntu@$SSH_HOST:$DEPLOY_PATH/
+    - ssh -i ~/.ssh/id_rsa ubuntu@$SSH_HOST "cd $DEPLOY_PATH && ./deploy.sh"
 
   environment:
     name: dev
