--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,6 +50,9 @@ deploy:
     - apt-get update
     - apt-get install openssh-client -y
 
+    - echo "$SSH_HOST"
+    - echo "$SSH_KEY_PEM"
+
     - echo "Deploying the project"  
     - echo "Setting up SSH key..."
     - mkdir -p ~/.ssh
@@ -66,8 +69,6 @@ deploy:
   # - chmod 644 ~/.ssh/known_hosts
 
   script:
-    - echo "Deploying the project"
-    - echo "@$SSH_HOST"
     - scp -i ~/.ssh/id_rsa backend/blur/build/libs/*.jar ubuntu@$SSH_HOST:$DEPLOY_PATH
     - ssh -i ~/.ssh/id_rsa ubuntu@$SSH_HOST "cd $DEPLOY_PATH && ./deploy.sh"
 
